Fixed button wrapping in show views for models that have large names.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,13 @@ header {
 	}
 }
 
+/*
+header h1 {
+	border: 2px solid red;
+	width: 10%;
+}
+*/
+
 #meta_attributes {
 	border: 1px solid grey;
 	border-bottom: 1px solid grey;
@@ -64,6 +71,8 @@ header {
 }
 
 ul.actions {
+	max-width: 75%;
+	min-width: 50%;
 	@extend .list-unstyled;
 	@extend .list-inline;
 }
